fix secondary nav negative offset making it appear offscreen

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -389,8 +389,6 @@ footer .credit {
 
 :where(.secondary-nav) {
   text-decoration: underline;
-  position: relative;
-  left: -20%;
 }
 
 .secondary-nav ul {
